@@ -1,4 +1,4 @@
-name = Dist-Zilla-Plugin-NoTabsTests
+name = Dist-Zilla-Plugin-Test-NoTabs
 author = Florian Ragwitz <rafl@debian.org>
 license = Perl_5
 copyright_holder = Florian Ragwitz
