@@ -7,6 +7,7 @@ Revision history for {{$dist->name}}
       customization of files to search via filefinder options; also works
       around issue with Test::NoTabs that tests nothing when the test is two
       levels deep from the dist root (RT#88042)
+    - renamed [NoTabsTests] to [Test::NoTabs].
 
 0.01      2010-05-29 17:02:08 +0200
     - Split off of Dist::Zilla::Plugin::SanityTests.
